--- a/frontend/src/components/Navigation/navigation.css
+++ b/frontend/src/components/Navigation/navigation.css
@@ -3,7 +3,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    font-family: 'Roboto Slab', serif;
     background: linear-gradient(
         90deg,
         rgba(123, 97, 255, 1) 0%,
